--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://github.com/aLekSandr-Cherepanov/form-test/стили/style.css">  
+    <link rel="stylesheet" href="https://aleksandr-cherepanov.github.io/form-test/стили/style.css">  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js" integrity="sha512-xxxxxxxxxxxx" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> 
     <title>Form</title>
@@ -71,6 +71,6 @@
             </form>
         </div>
     </main>
-    <script src="https://github.com/aLekSandr-Cherepanov/form-test/js/script.js"></script>
+    <script src="https://aleksandr-cherepanov.github.io/form-test/js/script.js"></script>
 </body>
 </html>
