--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
     <main class="main">
         <h1 class="head-form">Транспортные средства и водители</h1>
         <div class="wrapper">
-            <form action="/">
+            <form action="mail.php" name="form" method="POST">
                 <input type="hidden" name="project_name" value="Form test">
                 <input type="hidden" name="admin_email" value="cherepanov3496@gmail.com">
                 <input type="hidden" name="form_subject" value="Form Subject">
                 <div>
                     <label class="label-form" for="name">
                         <span class="head-input">Гос-номер</span>
-                        <input name="Гос-номер" class="form-input" type="text" placeholder="Укажите гос-номер">
+                        <input name="gos-namber" class="form-input" type="text" placeholder="Укажите гос-номер">
                     </label>
                 </div>
                 <div>
                     <label class="label-form" for="namber">
                         <span class="head-input">Транспортное средство</span>
-                        <input name="Транспортное средство" class="form-input" type="text" placeholder="Транспортное средство">
+                        <input name1="trancport" class="form-input" type="text" placeholder="Транспортное средство">
                     </label>
                 </div>
                 <div>
                     <label class="label-form" for="namber">
                         <span class="head-input">Ориентировочная дата прибытия к покупателю</span>
-                        <input name="дата прибытия" class="form-input" name="date" type="date" placeholder="Дата">
+                        <input name2="data-pribit" class="form-input" name="date" type="date" placeholder="Дата">
                     </label>
                 </div>
                 <h2>
@@ -40,28 +40,28 @@
                 <div>
                     <label class="label-form" for="namber">
                         <span class="head-input">ФИО</span>
-                        <input name="ФИО" class="form-input" name="date" type="text" placeholder="Укажите ФИО водителя">
+                        <input name3="fio" class="form-input" name="date" type="text" placeholder="Укажите ФИО водителя">
                     </label>
                 </div>
                 <div>
                     <label class="label-form" for="name">
                         <span class="head-input">Паспортные данные</span>
                         <div class="dabl-input">
-                            <input name="Серия" class="form-input form-input-seriy" name="date" type="text" placeholder="Серия">
-                            <input name="Номер" class="form-input form-input-number" name="date" type="text" placeholder="Номер">
+                            <input name4="seria" class="form-input form-input-seriy" name="date" type="text" placeholder="Серия">
+                            <input name5="namber2" class="form-input form-input-number" name="date" type="text" placeholder="Номер">
                         </div>
                     </label>
                 </div>
                 <div>
                     <label class="label-form" for="name">
                         <span class="head-input">Кем выдан</span>
-                        <input name="Кем выдан" class="form-input" name="date" type="text" placeholder="Кем выдан">
+                        <input name6="vidan" class="form-input" name="date" type="text" placeholder="Кем выдан">
                     </label>
                 </div>
                 <div>
                     <label class="label-form" for="namber">
                         <span class="head-input">Когда выдан</span>
-                        <input name="Когда выдан" class="form-input" name="date" type="text" placeholder="Когда выдан">
+                        <input name7="kogda-vidan" class="form-input" name="date" type="text" placeholder="Когда выдан">
                     </label>
                 </div>
                 <div class="block-button">
