--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div>
                     <label class="label-form" for="namber">
                         <span class="head-input">Ориентировочная дата прибытия к покупателю</span>
-                        <input name2="data-pribit" class="form-input" name="date" type="date" placeholder="Дата">
+                        <input name2="data-pribit" class="form-input"  type="date" placeholder="Дата">
                     </label>
                 </div>
                 <h2>
@@ -40,28 +40,28 @@
                 <div>
                     <label class="label-form" for="namber">
                         <span class="head-input">ФИО</span>
-                        <input name3="fio" class="form-input" name="date" type="text" placeholder="Укажите ФИО водителя">
+                        <input name3="fio" class="form-input"  type="text" placeholder="Укажите ФИО водителя">
                     </label>
                 </div>
                 <div>
                     <label class="label-form" for="name">
                         <span class="head-input">Паспортные данные</span>
                         <div class="dabl-input">
-                            <input name4="seria" class="form-input form-input-seriy" name="date" type="text" placeholder="Серия">
-                            <input name5="namber2" class="form-input form-input-number" name="date" type="text" placeholder="Номер">
+                            <input name4="seria" class="form-input form-input-seriy" type="text" placeholder="Серия">
+                            <input name5="namber2" class="form-input form-input-number"  type="text" placeholder="Номер">
                         </div>
                     </label>
                 </div>
                 <div>
                     <label class="label-form" for="name">
                         <span class="head-input">Кем выдан</span>
-                        <input name6="vidan" class="form-input" name="date" type="text" placeholder="Кем выдан">
+                        <input name6="vidan" class="form-input"  type="text" placeholder="Кем выдан">
                     </label>
                 </div>
                 <div>
                     <label class="label-form" for="namber">
                         <span class="head-input">Когда выдан</span>
-                        <input name7="kogda-vidan" class="form-input" name="date" type="text" placeholder="Когда выдан">
+                        <input name7="kogda-vidan" class="form-input"  type="text" placeholder="Когда выдан">
                     </label>
                 </div>
                 <div class="block-button">
