--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
             </form>
         </div>
     </main>
-    <script src="https://aleksandr-cherepanov.github.io/form-test/js/script.js"></script>
+    <!--<script src="https://aleksandr-cherepanov.github.io/form-test/js/script.js"></script>-->
 </body>
 </html>
