--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                     </label>
                 </div>
                 <div class="block-button">
-                    <button class="button button-left">Отправить</button>
+                    <div class="button">
+                        <input class="button button-left" type="submit" id="button" value="Отправить" />
+                      </div>
                     <button class="button button-right">Отменить</button>
                 </div>  
             </form>
