--- a/index.html
+++ b/index.html
@@ -71,28 +71,6 @@
             </form>
         </div>
     </main>
-    <!--<script src="https://aleksandr-cherepanov.github.io/form-test/js/script.js"></script>-->
-    <script>
-        $(document).ready(function() {
-
-//E-mail Ajax Send
-$("form").submit(function() { //Change
-    var th = $(this);
-    $.ajax({
-        type: "POST",
-        url: "mail.php", //Change
-        data: th.serialize()
-    }).done(function() {
-        alert("Thank you!");
-        setTimeout(function() {
-            // Done Functions
-            th.trigger("reset");
-        }, 1000);
-    });
-    return false;
-});
-
-});
-    </script>
+    <script src="https://aleksandr-cherepanov.github.io/form-test/js/script.js"></script>
 </body>
 </html>
